# opencv

./: .dir-locals.el  .gitignore  CONTRIBUTING.md  samuel_note.org
apps/: CMakeLists.txt
apps/sft/: config.cpp  dataset.cpp  sft.cpp
apps/ts_cascade/: CMakeLists.txt  config_template.xml  main.cpp  non_v.ard  path.txt  v.ard
apps/ts_cascade/cascade/: test.cpp
apps/ts_cascade/cascade/inc/: CBoost.hpp  CCascade.hpp  CHardCascade.hpp  CLRWeakLearner.hpp  CRealBoost.hpp  CWeakLearner.hpp
apps/ts_cascade/cascade/src/: CCascade.cpp  CHardCascade.cpp  CLRWeakLearner.cpp  CRealBoost.cpp
apps/ts_cascade/core/inc/: base-object.hpp
apps/ts_cascade/core/src/: base-object.cpp
apps/ts_cascade/feature/: main.cpp
apps/ts_cascade/feature/inc/: CFeaPool.hpp  CFeature.hpp  CHOGFea.hpp  CSURFFea.hpp
apps/ts_cascade/feature/src/: CHOGFea.cpp  CSURFFea.cpp
apps/ts_cascade/include/: common.h  tcomdef.h  tmem.h
modules/highgui/src/: cap_ffmpeg.cpp
modules/nonfree/src/: surf.cpp
modules/softcascade/src/: integral_channel_builder.cpp
